--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -17,8 +17,11 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.3",
+    "razorpay": "^2.9.4",
     "sequelize": "^6.37.3"
   }
 }
