--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.3",
     "razorpay": "^2.9.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^10.0.0"
   }
 }
