--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "aws-sdk": "^2.1683.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
