--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.10.3",
     "razorpay": "^2.9.4",
     "sequelize": "^6.37.3",
