--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.3",
+    "puppeteer": "^23.4.1",
     "razorpay": "^2.9.4",
     "sequelize": "^6.37.3",
     "sib-api-v3-sdk": "^8.5.0",
